# monet

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE.md  README.md  RELEASE-HOWTO.md  include_files_in_docs.py  mkdocs.yml  rebuild-examples.sh
docs/: Makefile  index.adoc  index.html  index.md  ref-color-table.cpp  ref-color.cpp  ref-color.txt  ref-fonts.cpp  ref-point.cpp  ref-point.txt  ref.adoc  ref.md  tut01.cpp  tut02-bad.cpp  tut02-bad.inc.cpp  tut02.cpp  tut03-no-saturation.cpp  tut03-no-saturation.inc.cpp  tut03.cpp  tut04-closepath.cpp  tut04-closepath.inc.cpp  tut04-fill.cpp  tut04-fill.inc.cpp  tut04-fillandstroke.cpp  tut04.cpp  tut05.cpp  tut06.cpp  tut06.inc.cpp  tut07.cpp  tut08.cpp  tut08.inc.cpp  tut09.cpp  tut09.inc.cpp  tutorial.adoc  tutorial.md
examples/: complex.cpp  demo  demo.cpp  simple.cpp  spirograph.cpp
include/: monet.h  monet.hpp
test/: CMakeLists.txt
test/src/: test-svg.cpp  test-transforms.cpp
